--- a/team-website.html
+++ b/team-website.html
@@ -6,23 +6,41 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/team-website.css">
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">WebSiteName</a>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WebSiteName</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">Blog</a></li>
+                <li><a href="#">Quote</a></li>
+            </ul>
+            <ul id="navbar2" class="nav navbar-nav navbar-right">
+                <li><a href="#">Service</a></li>
+                <li><a href="#">Work</a></li>
+            </ul>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Blog</a></li>
-            <li><a href="#">Quote</a></li>
-        </ul>
-        <ul id="navbar2" class="nav navbar-nav navbar-right">
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Work</a></li>
-        </ul>
+    </nav>
+    <div>
+        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
     </div>
-</nav>
+    <div>
+        <h2>FROM PARK CITY, UTAH</h2>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-4 col-sm-offset-2"><div class="circle" id="red"></div><div class="circle" id="orange"></div></div>
+        <div class="col-xs-12 col-sm-4"><div class="circle" id="green"></div><div class="circle" id="blue"></div></div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-xs-2 col-sm-6 col-md4"></div>
+        <div class="col-xs-2 col-sm-6 col-md4"></div>
+        <div class="col-xs-2 col-sm-6 col-md4"></div>
+    </div>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
