added thumbnails and blog img's

--- a/team-website.html
+++ b/team-website.html
@@ -9,37 +9,48 @@
     <link rel="stylesheet" href="css/team-website.css">
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">WebSiteName</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Blog</a></li>
-                <li><a href="#">Quote</a></li>
-            </ul>
-            <ul id="navbar2" class="nav navbar-nav navbar-right">
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Work</a></li>
-            </ul>
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
-    </nav>
-    <div>
-        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Blog</a></li>
+            <li><a href="#">Quote</a></li>
+        </ul>
+        <ul id="navbar2" class="nav navbar-nav navbar-right">
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Work</a></li>
+        </ul>
     </div>
-    <div>
-        <h2>FROM PARK CITY, UTAH</h2>
+</nav>
+<div>
+    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+</div>
+<div>
+    <h2>FROM PARK CITY, UTAH</h2>
+</div>
+<div class="row">
+    <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+        <div class="circle" id="red"></div>
+        <div class="circle" id="orange"></div>
     </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-4 col-sm-offset-2"><div class="circle" id="red"></div><div class="circle" id="orange"></div></div>
-        <div class="col-xs-12 col-sm-4"><div class="circle" id="green"></div><div class="circle" id="blue"></div></div>
+    <div class="col-xs-12 col-sm-4">
+        <div class="circle" id="green"></div>
+        <div class="circle" id="blue"></div>
     </div>
-    <hr>
-    <div class="row">
-        <div class="col-xs-2 col-sm-6 col-md4"></div>
-        <div class="col-xs-2 col-sm-6 col-md4"></div>
-        <div class="col-xs-2 col-sm-6 col-md4"></div>
+</div>
+<hr>
+<div id="bottom" class="row">
+    <div class="col-xs-2 col-sm-6 col-md-4">Projects<br> <img class="thumb" src="img/video-player-2.png"> <img class="thumb"
+                                                                                                          src="img/video-player-2.png">
     </div>
+    <div class="col-xs-2 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png"> <img class="thumb"
+                                                                                                 src="img/video-player-2.png">
+    </div>
+    <div class="col-xs-2 col-sm-6 col-md-4">Blog<br><img class="blog" src="img/calendar-5.png"><img class="blog" src="img/calendar-5.png"><img class="blog" src="img/calendar-5.png"></div>
+</div>
+
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
