--- a/team-website.html
+++ b/team-website.html
@@ -31,13 +31,21 @@
     <h2>FROM PARK CITY, UTAH</h2>
 </div>
 <div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-2">
-        <div class="circle" id="red"></div>
-        <div class="circle" id="orange"></div>
+    <div class="col-xs-12 col-sm-4 col-sm-offset-1">
+        <div class="col-xs-6 col-sm-3 circle" id="red">
+            <h4>DESIGN</h4>
+        </div>
+        <div class="col-xs-6 col-sm-3 circle" id="orange">
+            <h4>DEVELOP</h4>
+        </div>
     </div>
     <div class="col-xs-12 col-sm-4">
-        <div class="circle" id="green"></div>
-        <div class="circle" id="blue"></div>
+        <div class="col-xs-6 col-sm-3 circle" id="green">
+            <h4>SUPPORT</h4>
+        </div>
+        <div class="col-xs-6 col-sm-3 circle" id="blue">
+            <h4>HOST</h4>
+        </div>
     </div>
 </div>
 <hr>
