--- a/team-website.html
+++ b/team-website.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/team-website.css">
 </head>
 <body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+<!-- Latest compiled and minified JavaScript -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -24,46 +29,54 @@
         </ul>
     </div>
 </nav>
-<div>
-    <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
-</div>
-<div>
-    <h2>FROM PARK CITY, UTAH</h2>
-</div>
-<div class="row">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-1">
-        <div class="col-xs-6 col-sm-3 circle" id="red">
-            <h4>DESIGN</h4>
+<div class="container">
+    <div>
+        <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
+    </div>
+    <div>
+        <h2>FROM PARK CITY, UTAH</h2>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-4 col-sm-offset-1">
+            <div class="col-xs-6 col-sm-3 circle" id="red">
+                <h4>DESIGN</h4>
+            </div>
+            <div class="col-xs-6 col-sm-3 circle" id="orange">
+                <h4>DEVELOP</h4>
+            </div>
         </div>
-        <div class="col-xs-6 col-sm-3 circle" id="orange">
-            <h4>DEVELOP</h4>
+        <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-6 col-sm-3 circle" id="green">
+                <h4>SUPPORT</h4>
+            </div>
+            <div class="col-xs-6 col-sm-3 circle" id="blue">
+                <h4>HOST</h4>
+            </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-4">
-        <div class="col-xs-6 col-sm-3 circle" id="green">
-            <h4>SUPPORT</h4>
+    <hr>
+    <div id="bottom" class="row">
+        <div class="col-sm-12 col-md-9">
+            <div class="col-xs-12 col-sm-6 col-md-4">Projects<br> <img class="thumb" src="img/video-player-2.png"> <img
+                    class="thumb"
+                    src="img/video-player-2.png">
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png"> <img
+                    class="thumb"
+                    src="img/video-player-2.png">
+            </div>
         </div>
-        <div class="col-xs-6 col-sm-3 circle" id="blue">
-            <h4>HOST</h4>
+        <div class="col-xs-12 col-sm-12 col-md-3">Blog<br>
+            <div><img class="blog" src="img/calendar-5.png"></div>THE ADMIN BAR AND ABSOLUTE POSITIONING
+            <div><img class="blog"
+                      src="img/calendar-5.png">
+            </div>NIBBLER: AWESOME WEBSITE TESTING
+            <div><img
+                    class="blog" src="img/calendar-5.png">
+            </div>HOW TO GET GOOGLE TO LIKE YOU
         </div>
     </div>
 </div>
-<hr>
-<div id="bottom" class="row">
-    <div class="col-xs-2 col-sm-6 col-md-4">Projects<br> <img class="thumb" src="img/video-player-2.png"> <img class="thumb"
-                                                                                                          src="img/video-player-2.png">
-    </div>
-    <div class="col-xs-2 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png"> <img class="thumb"
-                                                                                                 src="img/video-player-2.png">
-    </div>
-    <div class="col-xs-2 col-sm-6 col-md-4">Blog<br><img class="blog" src="img/calendar-5.png"><img class="blog" src="img/calendar-5.png"><img class="blog" src="img/calendar-5.png"></div>
-</div>
-
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
