made rows for calanders img

--- a/team-website.html
+++ b/team-website.html
@@ -67,13 +67,13 @@
             </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3">Blog<br>
-            <div><img class="blog" src="img/calendar-5.png"></div>THE ADMIN BAR AND ABSOLUTE POSITIONING
-            <div><img class="blog"
+            <div class="row"><img class="blog" src="img/calendar-5.png">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
+            <div class="row"><img class="blog"
                       src="img/calendar-5.png">
-            </div>NIBBLER: AWESOME WEBSITE TESTING
-            <div><img
+            NIBBLER: AWESOME WEBSITE TESTING</div>
+            <div class="row"><img
                     class="blog" src="img/calendar-5.png">
-            </div>HOW TO GET GOOGLE TO LIKE YOU
+            HOW TO GET GOOGLE TO LIKE YOU</div>
         </div>
     </div>
 </div>
