--- a/team-website.html
+++ b/team-website.html
@@ -36,20 +36,22 @@
     <div>
         <h2>FROM PARK CITY, UTAH</h2>
     </div>
-    <div class="row">
-        <div class="col-xs-12 col-sm-4 col-sm-offset-1">
-            <div class="col-xs-6 col-sm-3 circle" id="red">
+    <div class="row col-lg-offset-2 ">
+        <div class="col-xs-12 col-sm-4 circlepair">
+
+            <div class="col-xs-6 col-sm-3  circle" id="red">
                 <h4>DESIGN</h4>
             </div>
             <div class="col-xs-6 col-sm-3 circle" id="orange">
                 <h4>DEVELOP</h4>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-4">
-            <div class="col-xs-6 col-sm-3 circle" id="green">
+        <div class="col-xs-12 col-sm-4 circlepair">
+
+            <div class="col-xs-6 col-sm-2 circle" id="green">
                 <h4>SUPPORT</h4>
             </div>
-            <div class="col-xs-6 col-sm-3 circle" id="blue">
+            <div class="col-xs-6 col-sm-2 circle" id="blue">
                 <h4>HOST</h4>
             </div>
         </div>
