--- a/team-website.html
+++ b/team-website.html
@@ -62,20 +62,44 @@
             <div class="col-xs-12 col-sm-6 col-md-4">Projects<br> <img class="thumb" src="img/video-player-2.png"> <img
                     class="thumb"
                     src="img/video-player-2.png">
+                <div class="row col-lg-offset-2 ">
+                    <div class="col-xs-12 col-sm-4 circlepair">
+
+                        <div class="col-xs-6 col-sm-3  small-circle" id="red">
+                            <h6>d</h6>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 small-circle" id="orange">
+                            <h6>D</h6>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 circlepair">
+
+                        <div class="col-xs-6 col-sm-2 small-circle" id="green">
+                            <h6>S</h6>
+                        </div>
+                        <div class="col-xs-6 col-sm-2 small-circle" id="blue">
+                            <h6>H</h6>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png"> <img
-                    class="thumb"
-                    src="img/video-player-2.png">
+            <div id="thumb2" class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png">
+                <img
+                        class="thumb"
+                        src="img/video-player-2.png">
             </div>
         </div>
-        <div class="col-xs-12 col-sm-12 col-md-3">Blog<br>
+        <div id="bottom-text" class="col-xs-12 col-sm-12 col-md-3">Blog<br>
             <div class="row"><img class="blog" src="img/calendar-5.png">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
             <div class="row"><img class="blog"
-                      src="img/calendar-5.png">
-            NIBBLER: AWESOME WEBSITE TESTING</div>
+                                  src="img/calendar-5.png">
+                NIBBLER: AWESOME WEBSITE TESTING
+            </div>
             <div class="row"><img
                     class="blog" src="img/calendar-5.png">
-            HOW TO GET GOOGLE TO LIKE YOU</div>
+                HOW TO GET GOOGLE TO LIKE YOU
+            </div>
+            <div class="row"><img id="twitter" src="img/twitter.png"></div>
         </div>
     </div>
 </div>
