--- a/team-website.html
+++ b/team-website.html
@@ -36,8 +36,8 @@
     <div>
         <h2>FROM PARK CITY, UTAH</h2>
     </div>
-    <div class="row col-lg-offset-2 ">
-        <div class="col-xs-12 col-sm-4 circlepair">
+    <div class="row col-lg-offset-2 col-md-offset-1 col-sm-offset-0" id="circlewrap">
+        <div class="col-xs-12 col-sm-3 col-md-4 circlepair">
 
             <div class="col-xs-6 col-sm-3  circle" id="red">
                 <h4>DESIGN</h4>
@@ -46,7 +46,7 @@
                 <h4>DEVELOP</h4>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-4 circlepair">
+        <div class="col-xs-12 col-sm-3 col-md-4 circlepair">
 
             <div class="col-xs-6 col-sm-2 circle" id="green">
                 <h4>SUPPORT</h4>
