made small adjustments to the imgs

--- a/team-website.html
+++ b/team-website.html
@@ -59,45 +59,33 @@
     <hr>
     <div id="bottom" class="row">
         <div class="col-sm-12 col-md-9">
-            <div class="col-xs-12 col-sm-6 col-md-4">Projects<br> <img class="thumb" src="img/video-player-2.png"> <img
-                    class="thumb"
-                    src="img/video-player-2.png">
-                <div class="row col-lg-offset-2 ">
-                    <div class="col-xs-12 col-sm-4 circlepair">
-
-                        <div class="col-xs-6 col-sm-3  small-circle" id="red">
-                            <h6>d</h6>
-                        </div>
-                        <div class="col-xs-6 col-sm-3 small-circle" id="orange">
-                            <h6>D</h6>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 circlepair">
-
-                        <div class="col-xs-6 col-sm-2 small-circle" id="green">
-                            <h6>S</h6>
-                        </div>
-                        <div class="col-xs-6 col-sm-2 small-circle" id="blue">
-                            <h6>H</h6>
-                        </div>
-                    </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 bot-marg">Projects<br><img class="thumb" src="img/video-player-2.png">
+                <div class="row">
+                    <p class="col-xs-3 col-xs-offset-2">Project 1</p>
+                <div class="col-xs-1 col-xs-offset-1 small-circle" id="smred">
+                    <h6>d</h6>
+                </div>
+                <div class="col-xs-1 small-circle" id="smorange">
+                    <h6>D</h6>
+                </div>
+                <div class="col-xs-1 small-circle" id="smgreen">
+                    <h6>S</h6>
+                </div>
+                <div class="col-xs-1 small-circle" id="smblue">
+                    <h6>H</h6>
+                </div>
+                <img class="thumb" src="img/video-player-2.png">Project 2
                 </div>
             </div>
-            <div id="thumb2" class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png">
-                <img
-                        class="thumb"
-                        src="img/video-player-2.png">
+            <div id="thumb2" class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png">Project 3
+                <img class="thumb" src="img/video-player-2.png">Project 4
             </div>
         </div>
         <div id="bottom-text" class="col-xs-12 col-sm-12 col-md-3">Blog<br>
             <div class="row"><img class="blog" src="img/calendar-5.png">THE ADMIN BAR AND ABSOLUTE POSITIONING</div>
-            <div class="row"><img class="blog"
-                                  src="img/calendar-5.png">
-                NIBBLER: AWESOME WEBSITE TESTING
+            <div class="row"><img class="blog" src="img/calendar-5.png">NIBBLER: AWESOME WEBSITE TESTING
             </div>
-            <div class="row"><img
-                    class="blog" src="img/calendar-5.png">
-                HOW TO GET GOOGLE TO LIKE YOU
+            <div class="row"><img class="blog" src="img/calendar-5.png">HOW TO GET GOOGLE TO LIKE YOU
             </div>
             <div class="row"><img id="twitter" src="img/twitter.png"></div>
         </div>
