--- a/team-website.html
+++ b/team-website.html
@@ -16,9 +16,10 @@
 <!-- Latest compiled and minified JavaScript -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
-        <div class="navbar-header">
+        <div class="col-sm-push-12 col-md-push-0 navbar-header">
             <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
+        <!--<div><img src="img/roundlogo.jpeg"></div>-->
         <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Blog</a></li>
             <li><a href="#">Quote</a></li>
@@ -30,14 +31,14 @@
     </div>
 </nav>
 <div class="container">
-    <div>
+    <div class="center" id="mainhead">
         <h1>VISUAL DESIGN & WEB DEVELOPMENT</h1>
     </div>
-    <div>
+    <div class="center" id="secondhead">
         <h2>FROM PARK CITY, UTAH</h2>
     </div>
     <div class="row col-lg-offset-2 col-md-offset-1 col-sm-offset-0" id="circlewrap">
-        <div class="col-xs-12 col-sm-3 col-md-4 circlepair">
+        <div class="col-xs-12 col-sm-5 col-md-4 circlepair">
 
             <div class="col-xs-6 col-sm-3  circle" id="red">
                 <h4>DESIGN</h4>
@@ -46,7 +47,7 @@
                 <h4>DEVELOP</h4>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-3 col-md-4 circlepair">
+        <div class="col-xs-12 col-sm-5 col-md-4 circlepair">
 
             <div class="col-xs-6 col-sm-2 circle" id="green">
                 <h4>SUPPORT</h4>
@@ -59,25 +60,42 @@
     <hr>
     <div id="bottom" class="row">
         <div class="col-sm-12 col-md-9">
-            <div class="col-xs-12 col-sm-6 col-md-4 bot-marg">Projects<br><img class="thumb" src="img/video-player-2.png">
+            <div class="col-xs-12 col-sm-6 col-md-6 bot-marg">
+
+                Projects<br>
+
+
                 <div class="row">
-                    <p class="col-xs-3 col-xs-offset-2">Project 1</p>
-                <div class="col-xs-1 col-xs-offset-1 small-circle" id="smred">
-                    <h6>d</h6>
+
+                    <div class="col-md-6 col-lg-6 col-xs-12">
+                        <p>Project 1</p>
+                        <img class="thumb" src="img/video-player-2.png">
+                    </div>
+                    <div class="col-md-6 col-lg-6 col-xs-12">
+                        <p>Project 2</p>
+                        <img class="thumb" src="img/video-player-2.png">
+                    </div>
+
                 </div>
-                <div class="col-xs-1 small-circle" id="smorange">
-                    <h6>D</h6>
-                </div>
-                <div class="col-xs-1 small-circle" id="smgreen">
-                    <h6>S</h6>
-                </div>
-                <div class="col-xs-1 small-circle" id="smblue">
-                    <h6>H</h6>
-                </div>
-                <img class="thumb" src="img/video-player-2.png">Project 2
-                </div>
+
+                <!--<div class="col-xs-1 col-xs-offset-1 small-circle" id="smred">-->
+                    <!--<h6>d</h6>-->
+                <!--</div>-->
+                <!--<div class="col-xs-1 small-circle" id="smorange">-->
+                    <!--<h6>D</h6>-->
+                <!--</div>-->
+                <!--<div class="col-xs-1 small-circle" id="smgreen">-->
+                    <!--<h6>S</h6>-->
+                <!--</div>-->
+                <!--<div class="col-xs-1 small-circle" id="smblue">-->
+                    <!--<h6>H</h6>-->
+                <!--</div>-->
+                <!--<img class="thumb" src="img/video-player-2.png">Project 2-->
+                <!--</div>-->
             </div>
-            <div id="thumb2" class="col-xs-12 col-sm-6 col-md-4"><br><img class="thumb" src="img/video-player-2.png">Project 3
+            <div id="thumb2" class="col-xs-12 col-sm-6 col-md-6">
+
+                <img class="thumb" src="img/video-player-2.png">Project 3
                 <img class="thumb" src="img/video-player-2.png">Project 4
             </div>
         </div>
